--- a/Register-an-account.html
+++ b/Register-an-account.html
@@ -100,7 +100,7 @@ FrontendLogin_SBW_DE
             <input type="submit" class="btn" value="Register">
             <input type="reset" class="btn" value="Reset">
         </form>
-        <p>Already have an account? <a href="file:///C:/Users/babyo/Desktop/Fallproject-frontend-new/Frontend/login.html">Sign in</a></p>
+        <p>Already have an account? <a href="http://127.0.0.1:5500/login.html">Sign in</a></p>
     </div>
 
     <script>
