--- a/Spa.test/index.html
+++ b/Spa.test/index.html
@@ -50,7 +50,7 @@
         <ul>
             <li id="li1">Home Page</li>
             <li id="li2">Check User</li>
-            <li id="li3">Check Expense</li>
+            <li id="li3">Add Expense</li>
             <li id="li4">Check Budget</li>
         </ul>
     </div>
