Små justeringar i JS och lite stylingtester i HTML

--- a/login.html
+++ b/login.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .login{
+                border: solid 2px rgb(68, 68, 68);
+                border-radius: 10px;
+                width: 400px;
+                margin: auto;
+                vertical-align: middle;
+                
+        }
+
+        #Felmeddelande{
+            color: red;
+        }
+    </style>
 </head>
 <body>
-<div style="text-align: center">
+<div class="login">
 <h1>Fallprojekt Budgetapp</h1>
 <h2>Placeholder</h2>
 <div id="Felmeddelande"></div>
