Add styling to container and table

--- a/Spa.test/index.html
+++ b/Spa.test/index.html
@@ -1,61 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spa Test</title>
     <style>
-        .nav {
-            width: 600px;
-            height: 60px;
-            margin: 50px auto;
-            /* text-align: center; */
-            border: 3px solid #ccc;
-            background-color: #375d8f;
-        }
+      .nav {
+        width: 700px;
+        height: 60px;
+        margin: 50px auto;
+        /* text-align: center; */
+        border: 3px solid #ccc;
+        background-color: #375d8f;
+      }
 
-        button {
-            height: 30px;
-            margin: 3px;
-            cursor: pointer;
-            display: center;
-        }
+      button {
+        height: 30px;
+        margin: 3px;
+        cursor: pointer;
+        display: center;
+      }
 
-        #app {
-            display: flex;
-            justify-content: center;
-        }
+      #app {
+        display: flex;
+        justify-content: center;
+      }
 
-        .nav li {
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            float: left;
-            height: 30px;
-            line-height: 30px;
-            padding: 0 20px;
-            text-align: justify;
-            cursor: pointer;
-            list-style: none;
-        }
+      .nav li {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        float: left;
+        height: 30px;
+        line-height: 30px;
+        padding: 0 20px;
+        text-align: justify;
+        cursor: pointer;
+        list-style: none;
+      }
 
-        li {
-            list-style-type: none;
-        }
+      li {
+        list-style-type: none;
+      }
+
+      .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 50px 1fr 1fr;
+        column-gap: 30px;
+        align-items: start;
+      }
+      .option1 {
+        align-self: center;
+        justify-self: center;
+      }
+      .option2 {
+        align-self: center;
+        justify-self: center;
+      }
+      .btn {
+        grid-row: 2/3;
+        grid-column: 1/-1;
+      }
+
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+      table {
+        margin-top: 40px;
+        font-family: sans-serif;
+        border-collapse: collapse;
+        grid-row: 2/-1;
+        grid-column: 1/-1;
+      }
+      td,
+      th {
+        border: 1px solid black;
+        padding: 8px;
+        font-weight: bold;
+      }
+      th {
+        text-transform: uppercase;
+      }
+      tr {
+        text-align: center;
+      }
+      tr:nth-child(even) {
+        background-color: aqua;
+      }
+      tr:hover {
+        background-color: black;
+        color: white;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav">
-        <ul>
-            <li id="li1">Home Page</li>
-            <li id="li2">Check User</li>
-            <li id="li3">Add Expense</li>
-            <li id="li4">Check Budget</li>
-        </ul>
+      <ul>
+        <li id="li1">Home Page</li>
+        <li id="li2">Check User</li>
+        <li id="li3">Add Expense</li>
+        <li id="li4">Check Budget</li>
+        <li id="li5">Filters</li>
+      </ul>
     </div>
     <div id="app"></div>
 
     <script src="main.js" type="module"></script>
     <script src="./Expense/Fetching.js"></script>
-</body>
+    <script src="./Filter/expenseFilter.js" defer></script>
+  </body>
 </html>
