created page 6 and adjusted other info

--- a/Spa.test/index.html
+++ b/Spa.test/index.html
@@ -51,6 +51,7 @@
             <li id="li2">Check User</li>
             <li id="li3">Add Expense</li>
             <li id="li4">Check Budget</li>
+            <li id="li6">Check Budget Cat</li>
         </ul>
     </div>
     <div id="app"></div>
