Tried to get setTimeout to work, it doesn't..

--- a/login.html
+++ b/login.html
@@ -27,11 +27,11 @@
 <div id="Felmeddelande"></div>
 <form>Username
 <br>
-<input type="text" id="Username" required>
+<input type="text" id="Username" class="input" required>
 <br>
 Password
 <br>
-<input type="password" id="Password" required>
+<input type="password" id="Password" class="input" required>
 <br>
 <br>
 <button id="signIn">Log In</button> 
