Add div to recive error messages

--- a/Spa.test/Filter/expenseFilter.html
+++ b/Spa.test/Filter/expenseFilter.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="option1"></div>
+  <div class="error"><p class="para"></p></div>
+  <div class="option1" onclick="changeCategory()"></div>
   <div class="option2"></div>
   <button class="btn" onclick="List()">List</button>
   <table>
