--- a/Spa.test/index.html
+++ b/Spa.test/index.html
@@ -44,21 +44,34 @@
 
       .container {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 50px 1fr 1fr;
-        column-gap: 30px;
+        grid-template-columns: 200px 200px 200px;
+        grid-template-rows: 50px 50px 1fr 1fr;
+
         align-items: start;
       }
-      .option1 {
+      .error {
+        grid-column: 1/-1;
+        grid-row: 1/2;
         align-self: center;
         justify-self: center;
+      }
+      .error p {
+        color: red;
+        font-size: 26px;
+      }
+      .option1 {
+        grid-column: 1/2;
+
+        justify-self: center;
+        align-self: center;
       }
       .option2 {
-        align-self: center;
         justify-self: center;
+        grid-column: 2/-1;
+        align-self: center;
       }
       .btn {
-        grid-row: 2/3;
+        grid-row: 3/4;
         grid-column: 1/-1;
       }
 
@@ -69,7 +82,7 @@
         margin-top: 40px;
         font-family: sans-serif;
         border-collapse: collapse;
-        grid-row: 2/-1;
+        grid-row: 3/-1;
         grid-column: 1/-1;
       }
       td,
