--- a/login.html
+++ b/login.html
@@ -11,32 +11,49 @@
             margin: 0;
             padding: 0;
         } */
+        body {
+            background-image: linear-gradient(to right, rgb(33, 33, 77), rgb(88, 76, 172) 50%, rgb(136, 136, 192));
+            /* background-image: linear-gradient(180deg, rgb(33, 33, 77), rgb(88, 76, 172) 50%, rgb(136, 136, 192)); */
+            background-image: url("pic/backgroundLogin.jpg");
+            background-size: 100%;
+            background-repeat: no-repeat;
+        }
+
         .login {
             display: grid;
-            border: solid 2px rgb(68, 68, 68);
-            border-radius: 10px;
+            border: solid 2px rgb(33, 33, 77);
+            margin: 30px auto;
+            width: 450px;
+            height: 430px;
+            border-radius: 25px; /*Hur mycket radius borde man ha??*/
             gap: 15px;
             align-items: center;
-            width: 445px;
-            grid-template-rows: 1fr 1fr 10px 50px 1fr 1fr;
+            grid-template-rows: 50px 1fr 10px 30px 30px 1fr;
             grid-template-columns: 100px 100px 100px 100px;
+            background-color: rgba(136, 136, 192, 0.8);
+            /* background-color: chartreuse; */
         }
 
         .header {
-            grid-row: 1 / -1;
-            grid-column: 1 / -1;
+            grid-row: 1 / 2;
+            grid-column: 1 / 3;
+            margin: 0;
             align-self: start;
-            text-align: center;
+            text-align: start;
+            font-size: 70px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            padding: 5px;
         }
 
         .text {
             margin: 0;
             justify-self: center;
             align-self: center;
-
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: white;
             padding-top: 15px;
             text-align: center;
-            grid-column: 2/4;
+            grid-column: 1/-1;
             grid-row: 2 / 3;
         }
 
@@ -49,8 +66,11 @@
         } */
 
         #Felmeddelande {
-            color: red;
+            color:rgb(194, 0, 0);
             margin: 4px;
+            font-size: 18px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: bold;
             grid-column: 1 / -1;
             grid-row: 3 / 4;
             justify-self: center;
@@ -60,44 +80,122 @@
         .input1 {
             grid-column: 2/4;
             grid-row: 4/ 5;
-            margin-bottom: 20px;
+            /* margin-bottom: 20px; */
+            padding: 2px;
         }
 
         .input2 {
 
             grid-column: 2/4;
             grid-row: 5 / 6;
-            margin-bottom: 20px;
+            /* margin-bottom: 5px; */
+            padding: 2px;
+            order: -1;
 
         }
 
         .signIn {
-            grid-column: 1/3;
-            grid-row: 6 / -1;
+            /* width: 100px; */
+            /* justify-self:end; */
+            /* margin: 1; */
+            align-self: flex-start;
+            justify-self: flex-start;
+            grid-column: 2/3;
+            grid-row: 6 / 7;
         }
 
         .register {
-            grid-column: 3/-1;
-
-            grid-row: 6 / -1;
+            /* display: flex; */
+            /* width: 100px;
+            margin: 1px; */
+            align-self: flex-start;
+            justify-self: flex-end;
+            grid-column: 3/4;
+            grid-row: 6 / 7;
         }
+
+        #id3 {
+            grid-column: 2 / 3;
+            grid-row: 6 / 7;
+            padding-bottom: 20px;
+            margin: 0;
+            margin-bottom: 10;
+            align-self: center;
+            justify-self: center;
+            color: white;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 12px;
+        }
+
+        .btn {
+            align-items: center;
+            background-image: linear-gradient(144deg, rgb(33, 33, 77), #584cac 50%, rgb(136, 136, 192));
+            border: 0;
+            border-radius: 8px;
+            box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+            box-sizing: border-box;
+            color: #FFFFFF;
+            display: flex;
+            font-family: Phantomsans, sans-serif;
+            font-size: 20px;
+            justify-content: center;
+            line-height: 1em;
+            max-width: 100%;
+            min-width: 140px;
+            padding: 3px;
+            text-decoration: none;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            white-space: nowrap;
+            cursor: pointer;
+        }
+
+        .btn:active,
+        .btn:hover {
+            outline: 0;
+        }
+
+        .btn span {
+            background-color: rgb(5, 6, 45);
+            padding: 10px 10px;
+            padding-top: 7px;
+            border-radius: 6px;
+            width: 100%;
+            height: 100%;
+            transition: 300ms;
+        }
+
+        .btn:hover span {
+            background: none;
+        }
+
+        @media (min-width: 768px) {
+            .btn {
+                font-size: 0.8rem;
+                min-width: 100px;
+            }
+        }
+
     </style>
 </head>
 
 <body>
     <div class="login">
-        <h1 class="header">Fallprojekt Budgetapp</h1>
+        <h1 class="header">Xpense</h1>
 
-        <h2 class="text">Placeholder med väldigt vacker text</h2>
+        <h2 class="text">Keep your economy balanced!</h2>
         <div id="Felmeddelande"></div>
 
-        <input type="text" id="Username" class="input input1" placeholder="User name" required>
+        <input type="text" id="Username" class="input input1" placeholder="Username" required>
 
         <input type="password" id="Password" class="input input2" placeholder="Password" required>
 
-        <button class="signIn" id="id2">Log In</button>
+        <button type="submit" class="btn signIn" id="id2" hover><span class="text">Log In</span></button>
 
-        <button class="register" id="id1">Register</button>
+        <button type="submit" class="btn register" id="id1" hover><span class="text">Register</span></button>
+
+        <a href="https://youtu.be/dQw4w9WgXcQ?t=82" id="id3">Forgot password?</a>
 
 
 
@@ -105,3 +203,57 @@
 </body>
 
 </html>
+
+
+<!-- HTML !
+<button class="button-64" role="button"><span class="text">Button 64</span></button>
+
+CSS
+.button-64 {
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.button-64:active,
+.button-64:hover {
+  outline: 0;
+}
+
+.button-64 span {
+  background-color: rgb(5, 6, 45);
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.button-64:hover span {
+  background: none;
+}
+
+@media (min-width: 768px) {
+  .button-64 {
+    font-size: 24px;
+    min-width: 196px;
+  }
+} -->
