Created basic frontend for CreateNewCategory

--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -116,6 +116,7 @@
             <li id="li4">Check Budget</li>
             <li id="li5">Filters</li>
             <li id="li6">Check Budget Cat</li>
+            <li id="li7">Add Cat</li>
         </ul>
     </div>
     <div id="app"></div>
