--- a/login.html
+++ b/login.html
@@ -7,10 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* *{
-            margin: 0;
-            padding: 0;
-        } */
+
         body {
             /* background-image: linear-gradient(180deg, rgb(33, 33, 77), rgb(88, 76, 172) 50%, rgb(136, 136, 192)); */
             background-image: url("pic/backgroundLogin.jpg");
@@ -26,13 +23,13 @@
         .login {
             display: grid;
             border: solid 2px rgb(33, 33, 77);
-            margin: 30px auto;
+            margin: 10% auto;
             width: 28.125rem;               /*Denna var tidigare 450px, försöker anpassa för att vara flexibel*/
             height: 26.875rem;              /*Dena var tidigare 430px*/
             border-radius: 25px;            /*Hur mycket radius borde man ha??*/
             gap: 15px;                      /*Vad faan gör denna??*/
-            align-items: center;            /*Är denna överflödig??*/
-            grid-template-rows: 50px 1fr 10px 30px 30px 1fr;
+            /* align-items: center;            Är denna överflödig?? */
+            grid-template-rows: 90px 120px 30px 30px 1fr;
             grid-template-columns: 100px 100px 100px 100px;
             background-color: rgba(136, 136, 192, 0.8);
             /*background-color: chartreuse;*/    /*Förmodligen världens bästa färg!!*/
@@ -40,85 +37,67 @@
 
         .header {
             grid-row: 1 / 2;
-            grid-column: 1 / 3;
+            grid-column: 1 / -1;
             margin: 0;
+            margin-left: 11%;
             /* overflow: hidden; */
             align-self: start;
-            /* text-align: start; */        /*Är denna överflödig??*/
             font-size: 70px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            padding: 5px;
+            padding: 1px;
         }
 
         .text {
-            /* margin: 0; */                /*Denna känns överflödig*/
-            /* justify-self: center; */
-            align-self: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: white;
-            padding-top: 15px;
-            text-align: center;
             grid-column: 1/-1;
             grid-row: 2 / 3;
+            margin: 0;
+            align-self: flex-start;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: white;
+            padding-top: 5px;
+            text-align: center;
         }
 
-        /* #Felmeddelande {
-            margin-top: 20px;
-            justify-self: center;
-            align-self: center;
-            grid-column: 2/4;
-            grid-row: 3 / 4;
-        } */
-
         #Felmeddelande {
-            color:rgb(194, 0, 0);
-            margin: 4px;
-            font-size: 18px;
+            color:rgb(161, 45, 45);
+            margin: 0px;
+            padding: 0px;
+            font-size: 20px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-weight: bold;
             grid-column: 1 / -1;
-            grid-row: 3 / 4;
+            grid-row: 2 / 3;
             justify-self: center;
-            align-self: center;
+            align-self: flex-end;
         }
 
         .input1 {
             grid-column: 2/4;
-            grid-row: 4/ 5;
-            /* margin-bottom: 20px; */
+            grid-row: 3 / 4;
             padding: 2px;
-            box-shadow: rgba(0, 0, 0, 0.712) 0 15px 30px -5px;
+            height: 20px;
         }
 
         .input2 {
-
-            grid-column: 2/4;
-            grid-row: 5 / 6;
-            /* margin-bottom: 5px; */
+            grid-column: 2 /4;
+            grid-row: 4 / 5;
             padding: 2px;
-            order: -1;
-            box-shadow: rgb(60, 255, 0) 0 15px 30px -5px;
+            height: 20px;
 
         }
 
         .signIn {
-            /* width: 100px; */
-            /* justify-self:end; */
-            /* margin: 1; */
             align-self: flex-start;
             justify-self: center;
             grid-column: 2 / 3;
-            grid-row: 6 / 7;
+            grid-row: 5 / 6;
         }
 
         .register {
-            /* display: flex; */
-            /* width: 100px;
-            margin: 1px; */
             align-self: flex-start;
             justify-self: center;
             grid-column: 3 / 4;
-            grid-row: 6 / 7;
+            grid-row: 5 / 6;
         }
 
         #id3 {
@@ -126,13 +105,12 @@
             grid-row: 6 / 7;
             padding: 2px;
             margin: 0;
-            /* margin-bottom: 10; */
+            margin-bottom: 25px;
             align-self: center;
             justify-self: center;
             color: white;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 12px;
-            /*Glöm inte att ta bort den här fula jäveln*/box-shadow: rgb(255, 0, 0) 0 15px 30px -5px; /*Finns det någon text shadow??*/
         }
 
         .btn {
@@ -145,11 +123,10 @@
             color: #FFFFFF;
             display: flex;
             font-family: Phantomsans, sans-serif;
-            font-size: 1.25rem;             /*Denna var tidigare 20px*/
+            font-size: 1rem;             /*Denna var tidigare 20px*/
             justify-content: center;
             line-height: 1em;
-            max-width: 100%;
-            /* min-width: 140px; */         /*Någonting med bland annat denna för att få knapparna responsiva men behålla rätt dimensioner*/
+            min-width: 100%;
             padding: 3px;
             text-decoration: none;
             user-select: none;
@@ -162,10 +139,8 @@
 
         .btn:active,                        /*Vad fan gör denna?!?!?*/
         .btn:hover {
-            background-color: black;
-            color: black;
             outline-color: black;
-            outline: 110px;
+            outline: 0px;
             outline-style: solid;
         }
 
@@ -185,7 +160,7 @@
 
         @media (min-width: 768px) {
             .btn {
-                font-size: 0.9rem;
+                font-size: 1rem;
                 min-width: 100%;
             }
         }
@@ -210,63 +185,7 @@
 
         <a href="https://youtu.be/dQw4w9WgXcQ?t=82" id="id3">Forgot password?</a>
 
-
-
         <script src="login.js"></script>
 </body>
 
 </html>
-
-
-<!-- HTML !
-<button class="button-64" role="button"><span class="text">Button 64</span></button>
-
-CSS
-.button-64 {
-  align-items: center;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-  border: 0;
-  border-radius: 8px;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: flex;
-  font-family: Phantomsans, sans-serif;
-  font-size: 20px;
-  justify-content: center;
-  line-height: 1em;
-  max-width: 100%;
-  min-width: 140px;
-  padding: 3px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
-}
-
-.button-64:active,
-.button-64:hover {
-  outline: 0;
-}
-
-.button-64 span {
-  background-color: rgb(5, 6, 45);
-  padding: 16px 24px;
-  border-radius: 6px;
-  width: 100%;
-  height: 100%;
-  transition: 300ms;
-}
-
-.button-64:hover span {
-  background: none;
-}
-
-@media (min-width: 768px) {
-  .button-64 {
-    font-size: 24px;
-    min-width: 196px;
-  }
-} -->
