Slight change in links.

--- a/login.html
+++ b/login.html
@@ -183,7 +183,7 @@
 
         <button type="submit" class="btn register" id="id1" hover><span class="text">Register</span></button>
 
-        <a href="https://youtu.be/dQw4w9WgXcQ?t=82" id="id3">Forgot password?</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="id3">Forgot password?</a>
 
         <script src="login.js"></script>
 </body>
