Fixed CSS-stylesheet to only work on homepage.

--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -22,10 +22,10 @@
         display: center;
       }
 
-      /* #app {
+      #app {
         display: flex;
         justify-content: center;
-      } */
+      }
 
       .nav li {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -42,13 +42,13 @@
         list-style-type: none;
       }
 
-      /* .container {
+      .container {
         display: grid;
         grid-template-columns: 200px 200px 200px;
         grid-template-rows: 50px 50px 1fr 1fr;
 
         align-items: start;
-      } */
+      }
       .error {
         grid-column: 1/-1;
         grid-row: 1/2;
@@ -105,6 +105,7 @@
         color: white;
       }
     </style>
+    <link rel="stylesheet" href="Style/homeStyle.css">
   </head>
 
   <body>
