--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spa Test</title>
+    <title>Xpens</title>
     <style>
       .nav {
-        width: 900px;
+        width: 1024px;
         height: 60px;
         margin: 50px auto;
         /* text-align: center; */
@@ -46,9 +46,44 @@
         display: grid;
         grid-template-columns: 200px 200px 200px;
         grid-template-rows: 50px 50px 1fr 1fr;
-
         align-items: start;
       }
+      /*Add income*/
+      #myForm {
+        color: rgb(54, 54, 54);
+        font-size: 1.2rem;
+        font-weight: 700;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #90edf4;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        padding: 2rem;
+        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+      }
+      .btn {
+        border: none;
+        background-color: #4f5859;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+      }
+
+      input,
+      select {
+        outline-color: #4f5859;
+      }
+
+      .btn:active,
+      .btn:hover {
+        border: 1px solid #4f5859;
+        background-color: #528c90;
+        color: #fff;
+
+        font-weight: bold;
+      }
+
+      /*End Add income*/
       .error {
         grid-column: 1/-1;
         grid-row: 1/2;
@@ -109,19 +144,30 @@
 
   <body>
     <div class="nav">
-        <ul>
-            <li id="li1">Home Page</li>
-            <li id="li2">Check User</li>
-            <li id="li3">Add Expense</li>
-            <li id="li4">Check Budget</li>
-            <li id="li5">Filters</li>
-            <li id="li6">Check Budget Cat</li>
-        </ul>
+      <ul>
+        <li id="li1">Home Page</li>
+        <li id="li2">Check User</li>
+        <li id="li8">Add Income</li>
+        <li id="li3">Add Expense</li>
+        <li id="li4">Check Budget</li>
+        <li id="li5">Filters</li>
+        <li id="li6">Check Budget Cat</li>
+      </ul>
     </div>
     <div id="app"></div>
 
     <script src="main.js" type="module"></script>
     <script src="./Expense/Fetching.js"></script>
     <script src="./Filter/expenseFilter.js" defer></script>
+    <script>
+      const Ulist = document.querySelector('ul')
+      Ulist.addEventListener('click', (e) => {
+        if (e.target.id === 'li8') {
+          document.body.style.backgroundColor = 'rgb(236, 236, 236)'
+        } else {
+          document.body.style.backgroundColor = '#fff'
+        }
+      })
+    </script>
   </body>
 </html>
