--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="savingPlan.css" />
     <style>
       .nav {
-        width: 1100px;
+        width: 100%;
         height: 60px;
         margin: 50px auto;
         /* text-align: center; */
