--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -1,207 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Xpens</title>
-    <link rel="stylesheet" href="savingPlan.css" />
-    <style>
-      .nav {
-        width: 100%;
-        height: 60px;
-        margin: 50px auto;
-        /* text-align: center; */
-        border: 3px solid #ccc;
-        background-color: #375d8f;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      button {
-        height: 30px;
-        margin: 3px;
-        cursor: pointer;
-        display: center;
-      }
+  <title>Xpens</title>
+  <link rel="stylesheet" href="savingPlan.css" />
+  <style>
+    body, html {
+      margin: 0px;
+    }
+    .nav {
+      align-items: center;
+      width: 100%;
+      height: 160px;
+      text-align: center;
+      /* border: 3px solid #ccc; */
+      background-color: #dbe5f3;
+    }
 
-      #app {
-        width: 1100px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-      }
+    button {
+      height: 30px;
+      margin: 3px;
+      cursor: pointer;
+      display: center;
+    }
+
+    #app {
+      width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+    }
 
 
-      .container {
-        display: grid;
-        grid-template-columns: 200px 200px 200px;
-        grid-template-rows: 50px 50px 1fr 1fr;
-        align-items: start;
-      }
+    .container {
+      display: grid;
+      grid-template-columns: 200px 200px 200px;
+      grid-template-rows: 50px 50px 1fr 1fr;
+      align-items: start;
+    }
 
-      /*Add income*/
-      #myForm1 {
-        color: rgb(54, 54, 54);
-        font-size: 1.2rem;
-        font-weight: 700;
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: #90edf4;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        padding: 2rem;
-        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
-      }
-      .btn {
-        border: none;
-        background-color: #4f5859;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-      }
+    /*Add income*/
+    #myForm1 {
+      color: rgb(54, 54, 54);
+      font-size: 1.2rem;
+      font-weight: 700;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #90edf4;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      padding: 2rem;
+      box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+    }
 
-      input,
-      select {
-        outline-color: #4f5859;
-      }
+    .btn {
+      border: none;
+      background-color: #4f5859;
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
 
-      .btn:active,
-      .btn:hover {
-        border: 1px solid #4f5859;
-        background-color: #528c90;
-        color: #fff;
+    input,
+    select {
+      outline-color: #4f5859;
+    }
 
-        font-weight: bold;
-      }
+    .btn:active,
+    .btn:hover {
+      border: 1px solid #4f5859;
+      background-color: #528c90;
+      color: #fff;
 
-      /*End Add income*/
+      font-weight: bold;
+    }
 
-      /*Add Expense & Check plan*/
-      .error {
-        grid-column: 1/-1;
-        grid-row: 1/2;
-        align-self: center;
-        justify-self: center;
-      }
+    /*End Add income*/
 
-      .error p {
-        color: red;
-        font-size: 26px;
-      }
+    /*Add Expense & Check plan*/
+    .error {
+      grid-column: 1/-1;
+      grid-row: 1/2;
+      align-self: center;
+      justify-self: center;
+    }
 
-      .option1 {
-        grid-column: 1/2;
-        justify-self: center;
-        align-self: center;
-      }
+    .error p {
+      color: red;
+      font-size: 26px;
+    }
 
-      .option2 {
-        justify-self: center;
-        grid-column: 2/-1;
-        align-self: center;
-      }
+    .option1 {
+      grid-column: 1/2;
+      justify-self: center;
+      align-self: center;
+    }
 
-      .btn {
-        grid-row: 3/4;
-        grid-column: 1/-1;
-      }
+    .option2 {
+      justify-self: center;
+      grid-column: 2/-1;
+      align-self: center;
+    }
 
-      tr:nth-child(even) {
-        background-color: #dddddd;
-      }
+    .btn {
+      grid-row: 3/4;
+      grid-column: 1/-1;
+    }
 
-      table {
-        margin-top: 40px;
-        font-family: sans-serif;
-        border-collapse: collapse;
-        grid-row: 3/-1;
-        grid-column: 1/-1;
-      }
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
 
-      td,
-      th {
-        border: 1px solid black;
-        padding: 8px;
-        font-weight: bold;
-      }
+    table {
+      margin-top: 40px;
+      font-family: sans-serif;
+      border-collapse: collapse;
+      grid-row: 3/-1;
+      grid-column: 1/-1;
+    }
 
-      th {
-        text-transform: uppercase;
-      }
+    td,
+    th {
+      border: 1px solid black;
+      padding: 8px;
+      font-weight: bold;
+    }
 
-      tr {
-        text-align: center;
-      }
+    th {
+      text-transform: uppercase;
+    }
 
-      tr:nth-child(even) {
-        background-color: lightblue;
-      }
+    tr {
+      text-align: center;
+    }
 
-      tr:hover {
-        background-color: black;
-        color: white;
-      }
+    tr:nth-child(even) {
+      background-color: lightblue;
+    }
 
-      /*End Expense  & Check plan*/
+    tr:hover {
+      background-color: black;
+      color: white;
+    }
 
-      li {
-        list-style: none;
-      }
-      .nav .hellobud {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-      }
-      
-      .dropdown {
-        display: flex;
-        display: inline-block;
-        flex-direction: row;
-      }
-    </style>
-  </head>
+    /*End Expense  & Check plan*/
 
-  <body>
+    li {
+      list-style: none;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      padding: 12px 16px;
+      z-index: 1;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .nav-items {
+      position: relative;
+      top: 30%;
+      display: flex;
+      text-align: center;
+      justify-content: space-evenly;
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
     <div class="nav">
-      <ul class="navitems">
-        <li>
-          <ul class="dropdown">
-            <li id="li1">Home Page</li>
-            <li id="li2">Saving Plan</li>
-            <li id="li3">Check Plan</li>
+      <ul class="nav-items">
+        <li class="dropdown">
+          <span>First dropdown</span>
+          <ul class="dropdown-content">
+            <!-- <li id="li1">Home Page</li> -->
+            <li class="li2">Saving Plan</li>
+            <li class="li3">Check Plan</li>
           </ul>
         </li>
-        <li>
-          <ul class="dropdown">
+        <li class="dropdown">
+          <span>Second dropdown</span>
+          <ul class="dropdown-content"">
             <li id="li8">Add Income</li>
             <li id="li4">Add Expense</li>
-            <li id="li5">Check Budget</li>
           </ul>
         </li>
-        <li>
-          <ul class="dropdown">
+        <li id="li1">
+          <span>Placeholder logo</span>
+        </li>
+        <li class="dropdown">
+          <span>Third dropdown</span>
+          <ul class="dropdown-content"">
             <li id="li6">Filters</li>
             <li id="li7">Check Budget Cat</li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <span>Fourth dropdown</span>
+          <ul class="dropdown-content"">
+            <li id="li5">Check Budget</li>
             <li id="li9">Add Cat</li>
           </ul>
         </li>
       </ul>
     </div>
-    <div id="app"></div>
+  </header>
+  <div id="app"></div>
 
-    <script src="main.js" type="module"></script>
-    <script src="./Expense/Fetching.js"></script>
-    <script src="./Filter/expenseFilter.js" defer></script>
+  <script src="main.js" type="module"></script>
+  <script src="./Expense/Fetching.js"></script>
+  <script src="./Filter/expenseFilter.js" defer></script>
 
-    <script>
-      const Ulist = document.querySelector('ul')
-      Ulist.addEventListener('click', (e) => {
-        if (e.target.id === 'li8') {
-          document.body.style.backgroundColor = 'rgb(236, 236, 236)'
-        } else {
-          document.body.style.backgroundColor = '#fff'
-        }
-      })
-    </script>
-  </body>
+  <script>
+    const Ulist = document.querySelector('ul')
+    Ulist.addEventListener('click', (e) => {
+      if (e.target.id === 'li8') {
+        document.body.style.backgroundColor = 'rgb(236, 236, 236)'
+      } else {
+        document.body.style.backgroundColor = '#fff'
+      }
+    })
+  </script>
+</body>
+
 </html>
