--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -1,193 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Xpens</title>
-    <link rel="stylesheet" href="savingPlan.css" />
-    <style>
-      .nav {
-        width: 100%;
-        height: 60px;
-        margin: 50px auto;
-        /* text-align: center; */
-        border: 3px solid #ccc;
-        background-color: #375d8f;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Xpens</title>
+  <link rel="stylesheet" href="savingPlan.css" /> <!-- Delete this? -->
+  <link rel="stylesheet" href="index.css" />
+</head>
 
-      button {
-        height: 30px;
-        margin: 3px;
-        cursor: pointer;
-        display: center;
-      }
-
-      #app {
-        width: 1100px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-      }
-      .nav li {
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        float: left;
-        height: 30px;
-        line-height: 30px;
-        padding: 0 20px;
-        text-align: justify;
-        cursor: pointer;
-        list-style: none;
-      }
-
-      li {
-        list-style-type: none;
-      }
-
-      .container {
-        display: grid;
-        grid-template-columns: 200px 200px 200px;
-        grid-template-rows: 50px 50px 1fr 1fr;
-        align-items: start;
-      }
-
-      /*Add income*/
-      #myForm1 {
-        color: rgb(54, 54, 54);
-        font-size: 1.2rem;
-        font-weight: 700;
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: #90edf4;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        padding: 2rem;
-        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
-      }
-      .btn {
-        border: none;
-        background-color: #4f5859;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: bold;
-      }
-
-      input,
-      select {
-        outline-color: #4f5859;
-      }
-
-      .btn:active,
-      .btn:hover {
-        border: 1px solid #4f5859;
-        background-color: #528c90;
-        color: #fff;
-
-        font-weight: bold;
-      }
-
-      /*End Add income*/
-
-      /*Add Expense & Check plan*/
-      .error {
-        grid-column: 1/-1;
-        grid-row: 1/2;
-        align-self: center;
-        justify-self: center;
-      }
-
-      .error p {
-        color: red;
-        font-size: 26px;
-      }
-
-      .option1 {
-        grid-column: 1/2;
-        justify-self: center;
-        align-self: center;
-      }
-
-      .option2 {
-        justify-self: center;
-        grid-column: 2/-1;
-        align-self: center;
-      }
-
-      .btn {
-        grid-row: 3/4;
-        grid-column: 1/-1;
-      }
-
-      tr:nth-child(even) {
-        background-color: #dddddd;
-      }
-
-      table {
-        margin-top: 40px;
-        font-family: sans-serif;
-        border-collapse: collapse;
-        grid-row: 3/-1;
-        grid-column: 1/-1;
-      }
-
-      td,
-      th {
-        border: 1px solid black;
-        padding: 8px;
-        font-weight: bold;
-      }
-
-      th {
-        text-transform: uppercase;
-      }
-
-      tr {
-        text-align: center;
-      }
-
-      tr:nth-child(even) {
-        background-color: lightblue;
-      }
-
-      tr:hover {
-        background-color: black;
-        color: white;
-      }
-
-      /*End Expense  & Check plan*/
-    </style>
-  </head>
-
-  <body>
-    <div class="nav">
-      <ul>
-        <li id="li1">Home Page</li>
-        <li id="li2">Saving Plan</li>
-        <li id="li3">Check Plan</li>
-        <li id="li8">Add Income</li>
-        <li id="li4">Add Expense</li>
-        <li id="li5">Check Budget</li>
-        <li id="li6">Filters</li>
-        <li id="li7">Check Budget Cat</li>
-        <li id="li9">Add Cat</li>
-      </ul>
+<body>
+  <header>
+    <div class='header-container'>
+      <div id="nav-btn-1" class='menu-item'>
+        Budget
+      </div>
+      <div id="nav-btn-2" class='menu-item'>
+        Income
+      </div>
+      <div id="nav-btn-3" class='menu-item logo'>
+        Logo
+      </div>
+      <div id="nav-btn-4" class='menu-item'>
+        Expense
+      </div>
+      <div id="nav-btn-5" class='menu-item'>
+        Item-4
+      </div>
     </div>
-    <div id="app"></div>
+  </header>
 
-    <script src="main.js" type="module"></script>
-    <script src="./Expense/Fetching.js"></script>
-    <script src="./Filter/expenseFilter.js" defer></script>
+  <main>
+    <div class='main-container'>
+      <div id="app"></div>
+      <aside>
+        <div class='menu-item aside'>
+          Item-1-1
+        </div>
+        <div class='menu-item aside'>
+          Item-1-2
+        </div>
+        <div class='menu-item aside'>
+          Item-1-3
+        </div>
+        <div class='menu-item aside'>
+          Item-1-4
+        </div>
+        <div class='menu-item aside'>
+          Item-1-5
+        </div>
+      </aside>
 
-    <script>
-      const Ulist = document.querySelector('ul')
-      Ulist.addEventListener('click', (e) => {
-        if (e.target.id === 'li8') {
-          document.body.style.backgroundColor = 'rgb(236, 236, 236)'
-        } else {
-          document.body.style.backgroundColor = '#fff'
-        }
-      })
-    </script>
-  </body>
+    </div>
+  </main>
+
+  <footer>
+    <div class='footer-container'>
+      <div class='footer-item'>
+        Footer Item 1-1
+      </div>
+      <div class='footer-item'>
+        Footer Item 1-2
+      </div>
+      <div class='footer-item'>
+        Footer Item 1-3
+      </div>
+      <div class='footer-item'>
+        Footer Item 1-4
+      </div>
+    </div>
+
+    <div class='footer-container'>
+      <div class='footer-item'>
+        Footer Item 2-1
+      </div>
+      <div class='footer-item'>
+        Footer Item 2-2
+      </div>
+      <div class='footer-item'>
+        Footer Item 2-3
+      </div>
+      <div class='footer-item'>
+        Footer Item 2-4
+      </div>
+    </div>
+
+    <div class='footer-container'>
+      <div class='footer-item'>
+        Footer Item 3-1
+      </div>
+      <div class='footer-item'>
+        Footer Item 3-2
+      </div>
+      <div class='footer-item'>
+        Footer Item 3-3
+      </div>
+      <div class='footer-item'>
+        Footer Item 3-4
+      </div>
+    </div>
+
+  </footer>
+
+
+  <script src="main.js" type="module"></script>
+  <script src="./Expense/Fetching.js"></script>
+  <script src="./Filter/expenseFilter.js" defer></script>
+
+  <script>
+    const Ulist = document.querySelector('ul')
+    Ulist.addEventListener('click', (e) => {
+      if (e.target.id === 'li8') {
+        document.body.style.backgroundColor = 'rgb(236, 236, 236)'
+      } else {
+        document.body.style.backgroundColor = '#fff'
+      }
+    })
+  </script>
+</body>
+
 </html>
