--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -35,19 +35,20 @@
     <div class='main-container'>
       <div id="app"></div>
       <aside>
-        <div class='menu-item aside'>
-          Item-1-1
+
+          <div id="sidebar-btn-1" class='menu-item aside'>
+            Item-1-1
+          </div>
+          <div id="sidebar-btn-2" class='menu-item aside'>
+            Item-1-2
         </div>
-        <div class='menu-item aside'>
-          Item-1-2
-        </div>
-        <div class='menu-item aside'>
+        <div id="sidebar-btn-3" class='menu-item aside'>
           Item-1-3
         </div>
-        <div class='menu-item aside'>
+        <div id="sidebar-btn-4" class='menu-item aside'>
           Item-1-4
         </div>
-        <div class='menu-item aside'>
+        <div id="sidebar-btn-5" class='menu-item aside'>
           Item-1-5
         </div>
       </aside>
