Fixed multiple page links.

--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -18,7 +18,7 @@
       height: 160px;
       text-align: center;
       border-bottom: rgb(175, 175, 175) solid 2px;
-      background: linear-gradient(0deg, rgba(235, 238, 241, 0.37), rgb(210, 213, 218))
+      background: linear-gradient(0deg, rgba(235, 238, 241, 0.37), rgb(210, 213, 218));
     }
 
     button {
@@ -217,7 +217,7 @@
       margin-top: 0;
     }
 
-    #li1 {
+    #logo {
       position: relative;
       top: -40px;
     }
@@ -263,32 +263,32 @@
         <li class="dropdown">
           <span>Plans</span>
           <ul class="dropdown-content">
-            <li id="li2">Saving Plan</li>
-            <li id="li3">Check Plan</li>
+            <li class="savingPlanLink">Saving Plan</li>
+            <li class="checkPlanLink">Check Plan</li>
           </ul>
         </li>
         <li class="dropdown">
           <span>Transactions</span>
-          <ul class="dropdown-content"">
-            <li id="li8">Add Income</li>
-            <li id="li4">Add Expense</li>
+          <ul class="dropdown-content">
+            <li class="addIncomeLink">Add Income</li>
+            <li class="addExpenseLink">Add Expense</li>
           </ul>
         </li>
-        <li id="li1">
+        <li class="homeLinkPage" id="logo">
           <img src="../pic/sponge.png" alt="sponge" width="150px">
         </li>
         <li class="dropdown">
           <span>Budgets</span>
-          <ul class="dropdown-content"">
-            <li id="li5">Check Budget</li>
-            <li id="li7">Check Budget Cat</li>
+          <ul class="dropdown-content">
+            <li class="checkBudgetLink">Check Budget</li>
+            <li class="checkBudgetCatLink">Check Budget Cat</li>
           </ul>
         </li>
         <li class="dropdown">
           <span>Others</span>
-          <ul class="dropdown-content"">
-            <li id="li9">Add Cat</li>
-            <li id="li6">Filters</li>
+          <ul class="dropdown-content">
+            <li class="addCatLink">Add Cat</li>
+            <li class="filterLink">Filters</li>
           </ul>
         </li>
       </ul>
@@ -305,7 +305,7 @@
       <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
     </div>
     <ul class="footer-list">
-      <li class="footer-item"><a href="#">Home</a></li>
+      <li class="footer-item homeLinkPage">Home</li>
       <li class="footer-item"><a href="#">Services</a></li>
       <li class="footer-item"><a href="#">About</a></li>
       <li class="footer-item"><a href="#">Terms</a></li>        
