--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -156,7 +156,7 @@
     .dropdown, #placeholder {
       position: relative;
       display: inline-block;
-      /* width: 120px; */
+      width: 120px;
       font-family:'Courier New', Courier, monospace;
       
     }
@@ -195,7 +195,7 @@
       border-radius: 10px;
       text-align: left;
       margin-left: -20px;
-      border: rgb(175, 175, 175) solid 2px;
+      border: rgb(175, 175, 175) solid 2px;      
     }
 
     li:hover {
@@ -274,7 +274,7 @@
             <li class="addExpenseLink">Add Expense</li>
           </ul>
         </li>
-        <li class="homeLinkPage" id="logo">
+        <li class="homeLink" id="logo">
           <img src="../pic/sponge.png" alt="sponge" width="150px">
         </li>
         <li class="dropdown">
@@ -305,7 +305,7 @@
       <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
     </div>
     <ul class="footer-list">
-      <li class="footer-item homeLinkPage">Home</li>
+      <li class="footer-item homeLink">Home</li>
       <li class="footer-item"><a href="#">Services</a></li>
       <li class="footer-item"><a href="#">About</a></li>
       <li class="footer-item"><a href="#">Terms</a></li>        
