--- a/XPENS/index.html
+++ b/XPENS/index.html
@@ -7,14 +7,15 @@
     <title>Xpens</title>
     <link rel="stylesheet" href="savingPlan.css" />
     <link rel="stylesheet" href="./form.css" />
+    <link rel="stylesheet" href="./index.css" />
     <style>
-      #app {
+      /* #app {
         width: 1100px;
         margin: 0 auto;
         display: flex;
 
         justify-content: center;
-      }
+      } */
       .nav li {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         float: left;
@@ -45,12 +46,12 @@
       display: center;
     }
 
-    #app {
+    /* #app {
       width: 1100px;
       margin: 0 auto;
       display: flex;
       justify-content: center;
-    }
+    } */
 
     tr:nth-child(even) {
       background-color: #dddddd;
